src/objects/check_PDF_Spacing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Description_header_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Description header left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_header_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Description header top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Description left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Description top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_number_header_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO number header left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_number_header_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO number header top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_number_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO number left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_number_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO number top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amount_in_words_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>amount in words left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amount_in_words_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>amount in words top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>date left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>date top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>financial_account_name_and_number_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>financial account name and number left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>financial_account_name_and_number_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>financial account name and number top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section1_amount_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section1 amount left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section1_amount_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section1 amount top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section1_check_number_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section1 check number left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section1_check_number_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section1 check number top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section1_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section1 left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section1_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section1 top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section1_vendor_name_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section1 vendor name left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section1_vendor_name_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section1 vendor name top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_amount_header_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 amount header left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_amount_header_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 amount header top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_amount_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 amount left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_amount_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 amount top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_check_number_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 check number left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_check_number_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 check number top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_invoice_number_and_date_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 invoice number and date left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_invoice_number_and_date_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 invoice number and date top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_vendor_name_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 vendor name left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section2_vendor_name_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section2 vendor name top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section3_check_number_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section3 check number left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section3_check_number_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section3 check number top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section3_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section3 left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section3_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section3 top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section3_vendor_name_left__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section3 vendor name left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>section3_vendor_name_top__c</fullName>
        <defaultValue>0</defaultValue>
        <label>section3 vendor name top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vendor_billing_address_left__c</fullName>
        <label>vendor billing address left</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vendor_billing_address_top__c</fullName>
        <label>vendor billing address top</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>check PDF Spacing</label>
</CustomObject>